--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
           maximum-scale=1.0,
           minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic-ext" rel="stylesheet">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<header>
+  <a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+  <nav>
+    <ul>
+      <li><a href="#" class="is-active">Apple</a></li>
+      <li><a href="#">Samsung</a></li>
+      <li><a href="#">Смарфоны и телефоны</a></li>
+      <li><a href="#" data-qa="hover">Ноутбуки и компьютеры</a></li>
+      <li><a href="#">Гаджеты</a></li>
+      <li><a href="#">Планшеты</a></li>
+      <li><a href="#">ФОТО</a></li>
+      <li><a href="#">ВИДЕО</a></li>
+    </ul>
+  </nav>
+</header>
 
 <script type="text/javascript" src="./main.js"></script>
 </body>
